--- a/NetflixDataAnalyze.ipynb
+++ b/NetflixDataAnalyze.ipynb
@@ -6,7 +6,7 @@
       "name": "NetflixDataAnalyze.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOyp978HFhEpnZcGuOa6Giu",
+      "authorship_tag": "ABX9TyNszaElpMjOJu4WFCmFDSA/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,7 +109,7 @@
         "and **maybe** also based on the year that the movie was released in (i will decide if it's worth it based on statistics).\n",
         "\n",
         "For task 2 i will create a function\n",
-        ">F: movieID -> movieClusterId\n",
+        "F: movieID -> movieClusterId\n",
         "---\n",
         "\n",
         "The steps:\n",
