--- a/kernelnf.ipynb
+++ b/kernelnf.ipynb
@@ -45,6 +45,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "KXYcBAg18N-Q",
+        "colab_type": "text"
+      },
+      "source": [
+        "Hey Yoram!\n",
+        "\n",
+        "Please note that the Netflix dataset is too big to upload to github so i have a duplicate kaggle notebook - there the dataset is allready preloaded.\n",
+        "link: \n",
+        "\n",
+        "Thanks for the greate class,\n",
+        "It was very much inspiring! **bold text**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "daOedV1A-JLP",
         "colab_type": "text"
       },
@@ -102,7 +118,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 146
+          "height": 126
         },
         "outputId": "f08d0758-bc5c-4b2d-e19d-07d899ffeecb"
       },
@@ -167,7 +183,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 469
+          "height": 449
         },
         "outputId": "b87f59a2-2b23-4d99-8e76-d3cec03eab48"
       },
